# tomasik_referat

./: .gitignore  README.md  pyproject.toml
tomasik/db/: batchCreateDB.bat  createDB.py  db.sqlite  db.sqlite-journal
tomasik/src/client/: client.py
tomasik/src/entities/: user.py
tomasik/src/server/: database.py  server.py
